# console-games

./: CMakeLists.txt
2048 game/: field2048.cpp  field2048.h  main2048.cpp
SEA FIGHT/: field.cpp  field.h  sea_fight.cpp  ship.cpp  ship.h
snake game/: board.cpp  board.h  snake.cpp  snake.h
